Fix mobile pagination block overlap

--- a/styles/courses.scss
+++ b/styles/courses.scss
@@ -29,6 +29,8 @@
       a {
         @apply text-gray3 no-underline bg-black bg-opacity-30;
         padding: 1em 2em;
+        display: block;
+        margin-bottom: 0;
       }
     }
   }
